--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,37 @@ h2 {
     text-align: center;
     text-decoration: none;
 }
+.service-box {
+    font-size: 1.7em;
+    text-align: center;
+}
+.service-box img {
+    width: 125px;
+}
+#team .section-text {
+    font-size: 1.9em;
+    text-align: center;
+}
+#team .member-name {
+    font-size: 1.5em;
+    font-weight: 700;
+}
+#team img {
+    width: 250px;
+    height: 180px;
+}
+.footer {
+    text-align: center;
+    font-size: 1.9em;
+}
+.address {
+    font-style: normal;
+    font-size: 0.8em;
+}
+.footer a {
+    color: var(--blue);
+    text-decoration: none;
+}
+.links {
+    list-style: none;
+}
