--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ h4 {
     font-size: 1.5em;
     letter-spacing: 0.4px;
     line-height: 1em;
+    margin: 15px;
 }
 h5 {
     font-size: 1.2em;
@@ -109,9 +110,24 @@ h2 {
     border-radius: 20px;
     box-sizing: border-box;
     box-shadow: 2px 2px 10px 0 #eee;
+    margin: 50px 5% 0 5%;
+    padding: 20px;
+    width: 40%;
 }
 .service-box img {
     width: 125px;
+}
+#team {
+    padding: 75px 0;
+    margin: 0 auto;
+}
+#team p {
+    width: 60%;
+    margin: 10px auto;
+}
+#team hr {
+    margin: 20px auto 30px auto;
+    width: 40%;
 }
 #team .section-text {
     font-size: 1.9em;
@@ -125,13 +141,30 @@ h2 {
     width: 250px;
     height: 180px;
 }
+.schedule-table {
+    margin: 0 auto 40px auto;
+    font-size: 1.5em;
+}
+.schedule-table th, td {
+    border: 1px solid black ;
+    border-width: 0 0 1px 0;
+   padding: 5px 10px 5px 10px;
+   text-align: center;
+
+}
 .footer {
     text-align: center;
     font-size: 1.9em;
+    padding: 40px 100px 40px 100px;
+    margin: 25px;
+}
+.footer ul{
+    padding: 0;
 }
 .address {
     font-style: normal;
     font-size: 0.8em;
+    margin: 30px;
 }
 .footer a {
     color: var(--blue);
