--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,22 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto:100,300,700');
 :root {
     --blue: rgb(67, 163, 230);
     --darkblue: rgb(25, 33, 41);
     --textcolor: rgb(0, 0, 0)
 }
-html,
-body {
+html, body {
   margin: 0;
   padding: 0;
 }
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto:100,300,700');
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+body {
+    font-family: "Roboto";
+    font-size: 10px;
+    line-height: 3.5em;
+    font-weight: 300;
+}
+h1, h2, h3, h4, h5, h6 {
     font-family: 'roboto condensed';
+    
 }
 h1 {
     font-size: 9em;
@@ -26,6 +27,9 @@ h2 {
     font-size: 5em;
     text-align: center;
     text-transform: uppercase;
+    line-height: 4em;
+    color: white;
+    text-shadow: #020819 8px -20px 9px;
 }
 h3 {
     font-size: 4.2em;
@@ -36,15 +40,16 @@ h4 {
     font-size: 1.5em;
     letter-spacing: 0.4px;
     line-height: 1em;
-    margin: 15px;
+    margin-bottom: 15px;
 }
 h5 {
     font-size: 1.2em;
     line-height: 1em;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 .nav-bar {
     background-color: var(--darkblue);
-    list-style: none;
     padding: 14px;
  
 }
@@ -56,6 +61,8 @@ h5 {
 .nav-bar-ul {
     width: 1200px;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
 }
 .nav-bar-ul li {
     list-style-type: none;
@@ -67,16 +74,17 @@ h5 {
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 50px;
+    position: relative;
+    height: 650px;
 }
 header {
     height: 650px;
 }
-h2 {
-    color: white;
-    text-shadow: #020819 8px -20px 9px;
-}
 .quote {
     font-size: 2.5em;
+    position: absolute;
+    left: 10%;
+    bottom: 100px;
 }
 .dark-background {
     background-color: var(--darkblue);
@@ -87,7 +95,7 @@ h2 {
     font-size: 2em;
     font-weight: 100;
     text-align: center;
-    margin: 20 0 0 0;
+    margin: 20 0;
 }
 .container {
     width: 1200px;
@@ -102,6 +110,7 @@ h2 {
     letter-spacing: 0.5px;
     text-align: center;
     text-decoration: none;
+    padding: 10px 30px;
 }
 .service-box {
     font-size: 1.7em;
@@ -120,6 +129,7 @@ h2 {
 #team {
     padding: 75px 0;
     margin: 0 auto;
+    
 }
 #team p {
     width: 60%;
@@ -146,10 +156,9 @@ h2 {
     font-size: 1.5em;
 }
 .schedule-table th, td {
-    border: 1px solid black ;
-    border-width: 0 0 1px 0;
-   padding: 5px 10px 5px 10px;
-   text-align: center;
+     border-bottom: 1px solid black;
+     padding: 5px 10px 5px 10px;
+     text-align: center;
 
 }
 .footer {
@@ -157,6 +166,9 @@ h2 {
     font-size: 1.9em;
     padding: 40px 100px 40px 100px;
     margin: 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .footer ul{
     padding: 0;
@@ -172,4 +184,38 @@ h2 {
 }
 .links {
     list-style: none;
+}
+#general-information {
+    display: flex;
+    justify-content: space-evenly;
+}
+#general-information .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 370px;
+}
+#structure > div {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap; 
+}
+
+#team > div {
+    display: flex;
+    justify-content: space-evenly;
+}
+/* (#team > div > article) dont work. modified selector to increase specificity
+added line-height for add space on top of picture*/
+#team > div > article .member-name {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    line-height: 60px;
+  }
+.map-frame {
+    height: 375px;
+    width: 60%;
 }
