--- a/css/style.css
+++ b/css/style.css
@@ -219,3 +219,31 @@ added line-height for add space on top of picture*/
     height: 375px;
     width: 60%;
 }
+.slot-form-container {
+    width: 40%;
+    margin: 18px auto 0 auto;
+    font-size: 1.5em;
+    text-align: center;
+}
+.slot-form-container label {
+    line-height: 15px;
+    margin: 5px;
+}
+
+.slot-form-container input, select {
+    height: 20px;
+    outline: none;
+    padding: 3px;
+    width: 100%;
+}
+.slot-form-container button {
+    border: 1px solid black;
+    color: black;
+    background-color: white;
+    padding: 9px;
+    margin-top: 15px;
+}
+.slot-form-container .slot-form-container-select {
+    padding: 0;
+    height: 28px;
+}
